--- a/templates/register.html
+++ b/templates/register.html
@@ -98,6 +98,7 @@
             });
             const result = await response.json();
             document.getElementById('message').textContent = result.message;
+            window.location.href = '/list'
         };
     </script>
 </body>
