--- a/templates/register.html
+++ b/templates/register.html
@@ -98,7 +98,7 @@
             });
             const result = await response.json();
             document.getElementById('message').textContent = result.message;
-            window.location.href = '/list'
+            window.location.href = '/list';
         };
     </script>
 </body>
