--- a/templates/list.html
+++ b/templates/list.html
@@ -20,7 +20,7 @@
         </ul>
         <p id="message"></p>
         <button id="addItemBtn">Add Item</button>
-        <a href="/">Back to Home</a>
+        <a href="/logout">Back to Home</a>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
