--- a/templates/register.html
+++ b/templates/register.html
@@ -98,7 +98,9 @@
             });
             const result = await response.json();
             document.getElementById('message').textContent = result.message;
-            window.location.href = '/list';
+            if (response.ok){
+                window.location.href = '/list';
+            }
         };
     </script>
 </body>
